# qKangaroo

./: .gitignore  CITATION.cff  Cargo.toml  INSTALL.md  PROJECT.md  README.md  check_install.py  test_q_kangaroo.ipynb  test_q_kangaroo_output.ipynb
.cargo/.ipynb_checkpoints/: config-checkpoint.toml
.github/workflows/: ci.yml  cli-release.yml  docs.yml  release.yml
.ipynb_checkpoints/: Cargo-checkpoint.toml  test_q_kangaroo-checkpoint.ipynb
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md  v5.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-REQUIREMENTS.md  (+11 more)
crates/qsym-core/: Cargo.toml
crates/qsym-core/src/: arena.rs  canonical.rs  expr.rs  lib.rs  number.rs  symbol.rs
crates/qsym-core/src/poly/: arithmetic.rs  cyclotomic.rs  factor.rs  gcd.rs  mod.rs  ratfunc.rs
crates/qsym-core/src/qseries/: appell_lerch.rs  bailey.rs  factoring.rs  gosper.rs  hypergeometric.rs  linalg.rs  mock_theta.rs  mod.rs  nonterminating.rs  partitions.rs  petkovsek.rs  pochhammer.rs  prodmake.rs  products.rs  qbinomial.rs  rank_crank.rs  relations.rs  theta.rs  utilities.rs  zeilberger.rs
crates/qsym-core/src/qseries/identity/: cusps.rs  database.rs  eta.rs  jac.rs  mod.rs  orders.rs  prove.rs
crates/qsym-core/src/render/: latex.rs  mod.rs  unicode.rs
crates/qsym-core/src/series/: arithmetic.rs  bivariate.rs  display.rs  generator.rs  mod.rs  trivariate.rs
crates/qsym-core/src/simplify/: mod.rs  rules.rs  traverse.rs
crates/qsym-core/tests/: arena_tests.rs  generator_tests.rs  number_tests.rs  qseries_appell_lerch_tests.rs  qseries_bailey_tests.rs  qseries_factoring_tests.rs  qseries_hypergeometric_tests.rs  qseries_identity_cusps_tests.rs  qseries_identity_database_tests.rs  qseries_identity_jac_eta_tests.rs  qseries_identity_prove_tests.rs  qseries_linalg_tests.rs  qseries_mock_theta_tests.rs  qseries_partitions_tests.rs  qseries_pochhammer_tests.rs  qseries_prodmake_tests.rs  qseries_products_tests.rs  qseries_relations_tests.rs  qseries_theta_tests.rs  render_tests.rs  series_tests.rs  simplify_tests.rs
crates/qsym-python/: Cargo.toml  pyproject.toml
crates/qsym-python/python/q_kangaroo/: __init__.py  __init__.pyi  _q_kangaroo.pyi
crates/qsym-python/python/qsymbolic/: __init__.py
crates/qsym-python/src/: convert.rs  dsl.rs  expr.rs  lib.rs  series.rs  session.rs
crates/qsym-python/tests/: test_integration.py
docs/: conf.py  function_guide.rst  index.rst  installation.rst  mathematical_notation.rst  requirements.txt
manual/: main.typ  template.typ
(+573 files in other folders)
