[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "qsymbolic"
version = "0.1.0"
description = "Symbolic computation engine for q-series"
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "qsymbolic._qsymbolic"
