[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "q-kangaroo"
version = "0.1.0"
description = "Symbolic computation engine for q-series, partition functions, and modular forms"
requires-python = ">=3.9"
license = "MIT"
keywords = [
    "q-series",
    "partitions",
    "modular-forms",
    "symbolic-computation",
    "number-theory",
    "theta-functions",
    "mock-theta",
    "hypergeometric",
    "bailey-chains",
    "eta-quotients",
]
authors = [{ name = "Author Name", email = "author@example.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/OWNER/q-kangaroo"
Repository = "https://github.com/OWNER/q-kangaroo"
"Bug Tracker" = "https://github.com/OWNER/q-kangaroo/issues"
Documentation = "https://OWNER.github.io/q-kangaroo"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py39"]
python-source = "python"
module-name = "q_kangaroo._q_kangaroo"
include = [{ path = "python/q_kangaroo/*.dll", format = "wheel" }]
